tests/ui/layout/post-mono-layout-cycle.stderr
error[E0391]: cycle detected when computing layout of `Wrapper<()>`
   |
   = note: ...which requires computing layout of `<() as Trait>::Assoc`...
   = note: ...which again requires computing layout of `Wrapper<()>`, completing the cycle
   = note: cycle used when computing layout of `core::option::Option<Wrapper<()>>`
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

note: the above error was encountered while instantiating `fn indirect::<()>`
  --> $DIR/post-mono-layout-cycle.rs:23:5
   |
LL |     indirect::<()>();
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
